Update print statements to use getFirst and getLast